--- a/MainUI.lfm
+++ b/MainUI.lfm
@@ -1,12 +1,149 @@
 object MainForm: TMainForm
-  Left = 0
+  Left = 20
   Height = 722
-  Top = 0
+  Top = 150
   Width = 1024
   ActiveControl = ListboxPanel
   Caption = 'Ocrivist'
-  ClientHeight = 695
+  ClientHeight = 697
   ClientWidth = 1024
+  Icon.Data = {
+    BE1000000000010001002020000001002000A810000016000000280000002000
+    0000400000000100200000000000001000006400000064000000000000000000
+    0000B0ED8000B0ED8000B0ED8000B0ED8000B0ED8000B0ED8000B0ED8000B0ED
+    8000B0ED8000B0ED8000B0ED8000B0ED8000B0ED8000B0ED8000B0ED8000B0ED
+    8000B0ED8000B0ED8000B0ED8000B0ED8000B0ED8000B0ED8000B0ED8000B0ED
+    8000B0ED8000B0ED8000B0ED8000B0ED8000B0ED8000B0ED8000B0ED8000B0ED
+    8000B0ED8000B0ED8000B0ED8000B0ED8000B0ED8000B0ED8000B0ED8000B0ED
+    8000B0ED8000B0ED8000B0ED8000B0ED8000B0ED8000B0ED8000B0ED8000B0ED
+    8000B0ED8000B0ED8000B0ED8000B0ED8000B0ED8000B0ED8000B0ED8000B0ED
+    8000B0ED8000B0ED8000B0ED8000B0ED8000B0ED8000B0ED8000B0ED8000B0ED
+    8000CCCDCDFF677480FF677480FF677480FF677480FF677480FF677480FF6774
+    80FF8C9094FF8C9094FF677480FF677480FF677480FF677480FF677480FFA8AC
+    B1FF677480FF677480FF677480FF677480FF677480FF8C9094FF677480FF6774
+    80FF677480FF677480FF677480FF677480FF677480FF677480FF677480FFCCCD
+    CDFF364962FF364962FF8C9094FFA8ACB1FFE4E6E4FFFCFFFDFFFCFFFDFFFCFF
+    FDFFFCFFFDFFFCFFFDFFFCFFFDFFFCFFFDFFE4E6E4FFA8ACB1FF677480FF333E
+    50FFA8ACB1FFE4E6E4FFFCFFFDFFFCFFFDFFFCFFFDFFFCFFFDFFFCFFFDFFFCFF
+    FDFFFCFFFDFFE4E6E4FFCCCDCDFF8C9094FF677480FF333E50FF333E50FF3649
+    62FF677480FFE4E6E4FFFCFFFDFFFCFFFDFFFCFFFDFFFCFFFDFFFCFFFDFFFCFF
+    FDFFFCFFFDFFFCFFFDFFFCFFFDFFFCFFFDFFCCCDCDFFA8ACB1FF8C9094FF8C90
+    94FFE4E6E4FFFCFFFDFFFCFFFDFFFCFFFDFFFCFFFDFFFCFFFDFFFCFFFDFFFCFF
+    FDFFE4E6E4FFCCCDCDFFCCCDCDFFA8ACB1FF8C9094FF8C9094FF333E50FF3649
+    62FF677480FFE4E6E4FFFCFFFDFFFCFFFDFFFCFFFDFFFCFFFDFFFCFFFDFFFCFF
+    FDFFFCFFFDFFFCFFFDFFFCFFFDFFFCFFFDFFCCCDCDFFA8ACB1FF8C9094FF8C90
+    94FFE4E6E4FFFCFFFDFFFCFFFDFFFCFFFDFFFCFFFDFFFCFFFDFFFCFFFDFFFCFF
+    FDFFE4E6E4FFCCCDCDFFCCCDCDFFA8ACB1FF8C9094FF8C9094FF333E50FF3649
+    62FF677480FFE4E6E4FFFCFFFDFFFCFFFDFFFCFFFDFFFCFFFDFFFCFFFDFFFCFF
+    FDFFFCFFFDFFFCFFFDFFFCFFFDFFFCFFFDFFCCCDCDFFA8ACB1FF8C9094FF8C90
+    94FFE4E6E4FFFCFFFDFFFCFFFDFFFCFFFDFFFCFFFDFFFCFFFDFFFCFFFDFFFCFF
+    FDFFE4E6E4FFCCCDCDFFCCCDCDFFA8ACB1FF8C9094FF8C9094FF333E50FF3649
+    62FF677480FFCCCDCDFFFCFFFDFFFCFFFDFFFCFFFDFFFCFFFDFFFCFFFDFFFCFF
+    FDFFFCFFFDFFFCFFFDFFFCFFFDFFFCFFFDFF8C9094FF333E50FF333E50FF0403
+    4CFF333E50FF333E50FF677480FFCCCDCDFFFCFFFDFFFCFFFDFFFCFFFDFFFCFF
+    FDFFE4E6E4FFCCCDCDFFCCCDCDFFA8ACB1FF8C9094FF8C9094FF333E50FF3649
+    62FF677480FFCCCDCDFFFCFFFDFFFCFFFDFFFCFFFDFFFCFFFDFFFCFFFDFFFCFF
+    FDFFFCFFFDFFFCFFFDFF8C9094FF04034CFF04034CFF0B0D97FF0B0D97FF0B0D
+    97FF0B0D97FF0B0D97FF04034CFF04034CFF364962FFE4E6E4FFFCFFFDFFFCFF
+    FDFFE4E6E4FFCCCDCDFFCCCDCDFFA8ACB1FF8C9094FF8C9094FF333E50FF3649
+    62FF677480FFCCCDCDFFFCFFFDFFFCFFFDFFFCFFFDFFFCFFFDFFFCFFFDFFFCFF
+    FDFFFCFFFDFF364962FF04034CFF0B0D97FF0200F1FF0200F1FF0E07FFFF0E07
+    FFFF0E07FFFF0200F1FF0200F1FF0200F1FF0B0D97FF04034CFFCCCDCDFFFCFF
+    FDFFE4E6E4FFCCCDCDFFCCCDCDFFA8ACB1FF8C9094FF8C9094FF333E50FF3649
+    62FF677480FFCCCDCDFFFCFFFDFFFCFFFDFFFCFFFDFFFCFFFDFFFCFFFDFFFCFF
+    FDFF364962FF04034CFF0200F1FF0200F1FF0E07FFFF0E07FFFF0E07FFFF0E07
+    FFFF0E07FFFF0E07FFFF0E07FFFF0200F1FF0200F1FF0B0D97FF04034CFFE4E6
+    E4FFE4E6E4FFCCCDCDFFCCCDCDFFA8ACB1FF8C9094FF8C9094FF333E50FF3649
+    62FF677480FFCCCDCDFFFCFFFDFFFCFFFDFFFCFFFDFFFCFFFDFFFCFFFDFFA8AC
+    B1FF04034CFF0200F1FF0200F1FF0E07FFFF0E07FFFF0200F1FF677480FF6774
+    80FFCCCDCDFFA19EFFFF0E07FFFF0E07FFFF0200F1FF0200F1FF0B0D97FF3649
+    62FFFCFFFDFFCCCDCDFFCCCDCDFFA8ACB1FF8C9094FF8C9094FF333E50FF3649
+    62FF677480FFCCCDCDFFFCFFFDFFFCFFFDFFFCFFFDFFFCFFFDFFFCFFFDFF333E
+    50FF0B0D97FF0200F1FF0200F1FF0E07FFFF0E07FFFFA8ACB1FF8C9094FF8C90
+    94FFE4E6E4FFFCFFFDFFB7B8F4FF0E07FFFF0E07FFFF0200F1FF0200F1FF0B0D
+    97FFA8ACB1FFCCCDCDFFCCCDCDFFA8ACB1FF8C9094FF8C9094FF333E50FF3649
+    62FF677480FFCCCDCDFFFCFFFDFFFCFFFDFFFCFFFDFFFCFFFDFFCCCDCDFF0403
+    4CFF0200F1FF0200F1FF0E07FFFF0E07FFFFCCCDCDFFA8ACB1FF8C9094FF8C90
+    94FFE4E6E4FFFCFFFDFFFCFFFDFFA19EFFFF0E07FFFF0200F1FF0200F1FF0200
+    F1FF4E4EACFFE4E6E4FFCCCDCDFFA8ACB1FF8C9094FF8C9094FF333E50FF3649
+    62FF677480FFCCCDCDFFFCFFFDFFFCFFFDFFFCFFFDFFFCFFFDFF677480FF0B0D
+    97FF0200F1FF0200F1FF0E07FFFF0200F1FFCCCDCDFFA8ACB1FF8C9094FF8C90
+    94FFE4E6E4FFFCFFFDFFFCFFFDFFFCFFFDFF0200F1FF0200F1FF0200F1FF0200
+    F1FF0B0D97FFE4E6E4FFCCCDCDFFA8ACB1FF8C9094FF8C9094FF333E50FF3649
+    62FF677480FFCCCDCDFFFCFFFDFFFCFFFDFFFCFFFDFFFCFFFDFF4E4EACFF0200
+    F1FF0200F1FF0200F1FF0E07FFFFB7B8F4FFCCCDCDFFA8ACB1FF8C9094FF8C90
+    94FFE4E6E4FFFCFFFDFFFCFFFDFFFCFFFDFF0200F1FF0200F1FF0200F1FF0200
+    F1FF0B0D97FFE4E6E4FFCCCDCDFFA8ACB1FF8C9094FF8C9094FF333E50FF3649
+    62FF677480FFCCCDCDFFFCFFFDFFFCFFFDFFFCFFFDFFFCFFFDFF4E4EACFF0200
+    F1FF0200F1FF0200F1FF0200F1FFB7B8F4FFCCCDCDFFA8ACB1FF8C9094FF8C90
+    94FFE4E6E4FFFCFFFDFFFCFFFDFFFCFFFDFF0B0D97FF0200F1FF0200F1FF0200
+    F1FF0200F1FFE4E6E4FFCCCDCDFFA8ACB1FF8C9094FF8C9094FF333E50FF3649
+    62FF677480FFE4E6E4FFFCFFFDFFFCFFFDFFFCFFFDFFFCFFFDFF4E4EACFF0200
+    F1FF0200F1FF0200F1FF0200F1FFB7B8F4FFCCCDCDFFA8ACB1FF8C9094FF8C90
+    94FFE4E6E4FFFCFFFDFFFCFFFDFFFCFFFDFF0B0D97FF0200F1FF0200F1FF0200
+    F1FF0200F1FFE4E6E4FFCCCDCDFFA8ACB1FF8C9094FF8C9094FF333E50FF3649
+    62FF677480FFE4E6E4FFFCFFFDFFFCFFFDFFFCFFFDFFFCFFFDFF4E4EACFF0200
+    F1FF0200F1FF0200F1FF0200F1FFB7B8F4FFCCCDCDFFA8ACB1FF8C9094FF8C90
+    94FFE4E6E4FFFCFFFDFFFCFFFDFFFCFFFDFF0B0D97FF0200F1FF0200F1FF0200
+    F1FF0200F1FFE4E6E4FFCCCDCDFFA8ACB1FF8C9094FF8C9094FF333E50FF3649
+    62FF677480FFE4E6E4FFFCFFFDFFFCFFFDFFFCFFFDFFFCFFFDFF4E4EACFF0200
+    F1FF0200F1FF0200F1FF0200F1FFB7B8F4FFCCCDCDFFA8ACB1FF8C9094FF8C90
+    94FFE4E6E4FFFCFFFDFFFCFFFDFFFCFFFDFF0B0D97FF0200F1FF0200F1FF0200
+    F1FF0200F1FFE4E6E4FFCCCDCDFFA8ACB1FF8C9094FF8C9094FF333E50FF3649
+    62FF677480FFCCCDCDFFFCFFFDFFFCFFFDFFFCFFFDFFFCFFFDFFB7B8F4FF0E07
+    FFFF0200F1FF0200F1FF0200F1FF04034CFFCCCDCDFFA8ACB1FF8C9094FF8C90
+    94FFE4E6E4FFFCFFFDFFFCFFFDFFCCCDCDFF0B0D97FF0200F1FF0200F1FF0E07
+    FFFF0200F1FFE4E6E4FFCCCDCDFFA8ACB1FF8C9094FF8C9094FF333E50FF3649
+    62FF677480FFCCCDCDFFFCFFFDFFFCFFFDFFFCFFFDFFFCFFFDFFFCFFFDFF0E07
+    FFFF0E07FFFF0200F1FF0200F1FF04034CFFA8ACB1FFA8ACB1FF8C9094FF8C90
+    94FFE4E6E4FFFCFFFDFFFCFFFDFF364962FF0B0D97FF0200F1FF0200F1FF0E07
+    FFFF6468FEFFCCCDCDFFCCCDCDFFA8ACB1FF8C9094FF8C9094FF333E50FF3649
+    62FF677480FFCCCDCDFFFCFFFDFFFCFFFDFFFCFFFDFFFCFFFDFFFCFFFDFF0E07
+    FFFF0E07FFFF0200F1FF0200F1FF0B0D97FF04034CFFA8ACB1FF8C9094FF8C90
+    94FFE4E6E4FFFCFFFDFF364962FF04034CFF0200F1FF0200F1FF0E07FFFF0E07
+    FFFFE4E6E4FFCCCDCDFFCCCDCDFFA8ACB1FFA8ACB1FF8C9094FF333E50FF3649
+    62FF677480FFE4E6E4FFFCFFFDFFFCFFFDFFFCFFFDFFFCFFFDFFFCFFFDFFB7B8
+    F4FF0E07FFFF0E07FFFF0200F1FF0200F1FF0B0D97FF04034CFF333E50FF333E
+    50FF677480FF364962FF04034CFF0200F1FF0200F1FF0200F1FF0E07FFFF6468
+    FEFFE4E6E4FFCCCDCDFFCCCDCDFFA8ACB1FFA8ACB1FF8C9094FF333E50FF3649
+    62FF677480FFCCCDCDFFFCFFFDFFFCFFFDFFFCFFFDFFFCFFFDFFFCFFFDFFFCFF
+    FDFFA19EFFFF0E07FFFF0E07FFFF0200F1FF0200F1FF0200F1FF0B0D97FF0403
+    4CFF04034CFF0B0D97FF0200F1FF0200F1FF0E07FFFF0E07FFFF0E07FFFFFCFF
+    FDFFE4E6E4FFCCCDCDFFCCCDCDFFA8ACB1FFA8ACB1FF8C9094FF333E50FF3649
+    62FF677480FFE4E6E4FFFCFFFDFFFCFFFDFFFCFFFDFFFCFFFDFFFCFFFDFFFCFF
+    FDFFFCFFFDFFA19EFFFF0E07FFFF0E07FFFF0E07FFFF0200F1FF0200F1FF0200
+    F1FF0200F1FF0200F1FF0E07FFFF0E07FFFF0E07FFFF0E07FFFFFCFFFDFFFCFF
+    FDFFE4E6E4FFCCCDCDFFCCCDCDFFA8ACB1FF8C9094FF8C9094FF333E50FF3649
+    62FF677480FFCCCDCDFFFCFFFDFFFCFFFDFFFCFFFDFFFCFFFDFFFCFFFDFFFCFF
+    FDFFFCFFFDFFFCFFFDFFFCFFFDFF0200F1FF0E07FFFF0E07FFFF0E07FFFF0E07
+    FFFF0E07FFFF0E07FFFF0E07FFFF0E07FFFFA19EFFFFFCFFFDFFFCFFFDFFFCFF
+    FDFFE4E6E4FFCCCDCDFFCCCDCDFFA8ACB1FF8C9094FF8C9094FF333E50FF3649
+    62FF677480FFE4E6E4FFFCFFFDFFFCFFFDFFFCFFFDFFFCFFFDFFFCFFFDFFFCFF
+    FDFFFCFFFDFFFCFFFDFFFCFFFDFFE4E6E4FFCCCDCDFFB7B8F4FF677480FF6774
+    80FFB7B8F4FFB7B8F4FFE4E6E4FFFCFFFDFFFCFFFDFFFCFFFDFFFCFFFDFFFCFF
+    FDFFE4E6E4FFCCCDCDFFCCCDCDFFA8ACB1FF8C9094FF8C9094FF333E50FF3649
+    62FF677480FFE4E6E4FFFCFFFDFFFCFFFDFFFCFFFDFFFCFFFDFFFCFFFDFFFCFF
+    FDFFFCFFFDFFFCFFFDFFFCFFFDFFE4E6E4FFCCCDCDFFA8ACB1FF8C9094FF8C90
+    94FFE4E6E4FFFCFFFDFFFCFFFDFFFCFFFDFFFCFFFDFFFCFFFDFFFCFFFDFFFCFF
+    FDFFE4E6E4FFCCCDCDFFCCCDCDFFA8ACB1FF8C9094FF8C9094FF333E50FF3649
+    62FF677480FFE4E6E4FFFCFFFDFFFCFFFDFFFCFFFDFFFCFFFDFFFCFFFDFFFCFF
+    FDFFFCFFFDFFFCFFFDFFFCFFFDFFE4E6E4FFCCCDCDFFA8ACB1FF8C9094FF8C90
+    94FFE4E6E4FFFCFFFDFFFCFFFDFFFCFFFDFFFCFFFDFFFCFFFDFFFCFFFDFFFCFF
+    FDFFE4E6E4FFCCCDCDFFCCCDCDFFA8ACB1FF8C9094FF8C9094FF364962FF3649
+    62FFA8ACB1FF677480FF8C9094FF8C9094FFA8ACB1FFA8ACB1FFA8ACB1FFA8AC
+    B1FFA8ACB1FFA8ACB1FFA8ACB1FFA8ACB1FF8C9094FF8C9094FF677480FF8C90
+    94FF8C9094FF8C9094FFA8ACB1FFA8ACB1FFA8ACB1FFA8ACB1FFA8ACB1FFA8AC
+    B1FFA8ACB1FF8C9094FF8C9094FF677480FF677480FF677480FF364962FFA8AC
+    B1FFB0ED8000B0ED8000B0ED8000B0ED8000B0ED8000B0ED8000B0ED8000B0ED
+    8000B0ED8000B0ED8000B0ED8000B0ED8000B0ED8000B0ED8000B0ED8000B0ED
+    8000B0ED8000B0ED8000B0ED8000B0ED8000B0ED8000B0ED8000B0ED8000B0ED
+    8000B0ED8000B0ED8000B0ED8000B0ED8000B0ED8000B0ED8000B0ED8000B0ED
+    8000000000000000000000000000000000000000000000000000000000000000
+    0000000000000000000000000000000000000000000000000000000000000000
+    0000000000000000000000000000000000000000000000000000000000000000
+    0000000000000000000000000000000000000000000000000000000000000000
+    0000
+  }
   KeyPreview = True
   Menu = MainMenu
   OnCreate = FormCreate
@@ -16,12 +153,12 @@ object MainForm: TMainForm
   WindowState = wsMaximized
   object ListboxPanel: TPanel
     Left = 0
-    Height = 632
+    Height = 636
     Top = 42
     Width = 130
     Align = alLeft
     Caption = 'ListboxPanel'
-    ClientHeight = 632
+    ClientHeight = 636
     ClientWidth = 130
     TabOrder = 0
     object ThumbnailListBox: TListBox
@@ -31,7 +168,7 @@ object MainForm: TMainForm
       AnchorSideRight.Side = asrBottom
       AnchorSideBottom.Control = pagecountLabel
       Left = 1
-      Height = 609
+      Height = 615
       Top = 1
       Width = 128
       Anchors = [akTop, akLeft, akRight, akBottom]
@@ -52,8 +189,8 @@ object MainForm: TMainForm
     end
     object pagecountLabel: TLabel
       Left = 8
-      Height = 18
-      Top = 610
+      Height = 16
+      Top = 616
       Width = 5
       Anchors = [akLeft, akBottom]
       Caption = ' '
@@ -62,18 +199,18 @@ object MainForm: TMainForm
   end
   object Splitter1: TSplitter
     Left = 130
-    Height = 632
+    Height = 636
     Top = 42
     Width = 5
   end
   object OCRPanel: TPanel
     Left = 576
-    Height = 632
+    Height = 636
     Top = 42
     Width = 448
     Align = alRight
     Caption = 'OCRPanel'
-    ClientHeight = 632
+    ClientHeight = 636
     ClientWidth = 448
     TabOrder = 2
     object CorrectionPanel: TPanel
@@ -109,7 +246,7 @@ object MainForm: TMainForm
     object Panel2: TPanel
       Left = 1
       Height = 65
-      Top = 566
+      Top = 570
       Width = 446
       Align = alBottom
       Caption = 'Panel2'
@@ -117,7 +254,7 @@ object MainForm: TMainForm
     end
     object Panel3: TPanel
       Left = 1
-      Height = 416
+      Height = 420
       Top = 150
       Width = 446
       Align = alClient
@@ -127,7 +264,7 @@ object MainForm: TMainForm
   end
   object MainPanel: TPanel
     Left = 135
-    Height = 632
+    Height = 636
     Top = 42
     Width = 436
     Align = alClient
@@ -137,8 +274,8 @@ object MainForm: TMainForm
   end
   object StatusBar: TStatusBar
     Left = 0
-    Height = 21
-    Top = 674
+    Height = 19
+    Top = 678
     Width = 1024
     Panels = <    
       item
@@ -306,11 +443,33 @@ object MainForm: TMainForm
       ImageIndex = 17
       OnClick = SpellcheckButtonClick
     end
+    object LanguagePanel: TPanel
+      Left = 595
+      Height = 40
+      Top = 2
+      Width = 170
+      Caption = 'LanguagePanel'
+      ClientHeight = 40
+      ClientWidth = 170
+      TabOrder = 0
+      object LanguageComboBox: TComboBox
+        Left = 13
+        Height = 25
+        Top = 6
+        Width = 148
+        ItemHeight = 0
+        Items.Strings = (
+          ''
+        )
+        OnChange = LanguageComboBoxChange
+        TabOrder = 0
+      end
+    end
   end
   object Splitter2: TSplitter
     AnchorSideRight.Control = OCRPanel
     Left = 571
-    Height = 632
+    Height = 636
     Top = 42
     Width = 5
     Align = alRight
